# Learn_2

./: .gitignore  CMakeLists.txt  README.MD  main.cpp  tests.cpp
Build_System/: CMakeLists.txt
Internal Sub-projects/CommonCore_Lib/: CMakeLists.txt
Internal Sub-projects/CommonCore_Lib/include/Core/: Enums.h  RaceResult.h
Internal Sub-projects/CommonCore_Lib/src/: CommonCore.cpp
Internal Sub-projects/RacingEngine_DLL/: CMakeLists.txt
Internal Sub-projects/RacingSimulator_APP/: CMakeLists.txt
Internal Sub-projects/RacingSimulator_APP/src/: main.cpp
Internal Sub-projects/SupportPCH/: CMakeLists.txt
Internal Sub-projects/SupportPCH/include/: pch.h
Sorce/: in.txt
Src/: CMakeLists.txt
Src/AppSimpleStaticLIb/: CMakeLists.txt
Src/AppSimpleStaticLIb/code/: main.cpp
Src/Asci_base/: CMakeLists.txt  Stone story.txt  main13_chempion.cpp  main8-simple line art.cpp  main9_first step stone story.cpp  main_4-wireframe.cpp  micro_interface_lineart.txt  moto_micro_interface_lineart.txt  moto_simple_1.mtl  quad_20x45_distanced.txt  quad_console_lineart.txt  stone_story_moto_simple_1.txt  stone_story_style_ui.txt  stone_story_suzanne.txt  stone_story_triangle_stone.txt
Src/Asci_base/Becup/: main.cpp  main1.cpp  main10.cpp  main11_first_lineart.cpp  main12_EEEEEEEE.cpp  main12_brael.cpp  main2.cpp  main_3-color.cpp  main_5-outline.cpp  main_6-ASCII Line Art.cpp  main_7.cpp
Src/Executable_Race/code/: main.cpp
Src/FractionLib/: CMakeLists.txt
Src/FractionLib/code/: Fraction.cpp
Src/FractionLib/include/Fraction/: Fraction.hpp
Src/Greeter_lib/: CMakeLists.txt
Src/Greeter_lib/code/: Greeter.cpp
Src/Greeter_lib/include/: Greeter.hpp
Src/Leaver_lib/: CMakeLists.txt
Src/Leaver_lib/code/: Leaver.cpp
Src/Leaver_lib/include/: Leaver.hpp
Src/Support_library/code/: AirTransport.cpp  GroundTransport.cpp
Src/Support_library/include/Race/: Race.hpp
Src/Support_library/include/Transport/: AirTransport.hpp  Broom.hpp  CamelFast.hpp  Ground.hpp  Transport.hpp
Src/Tests/: CMakeLists.txt  Test_1.cpp  Test_2.cpp
Src/code/: SimpleMath.cpp  main.cpp
Src/code/Counter/: Counter.cpp
Src/include/Calc/: Calculator.hpp  Calculator.inl  SimpleMath.hpp
Src/include/Counter/: Counter.hpp
Src/include/Figure/: Base.hpp  BranchOfQuadrancles.hpp  BranchOfTriangles.hpp  Exeption.inl
Src/include/Until/: Input.hpp  Input.inl  MyRedererOOP.hpp
Tests/: CMakeLists.txt  calc_test.cpp  input_test.cpp
include/: MySmartType.hpp  doctest.h
